// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Elements/Inputs/TreeSpeciesInput Default 1`] = `
<div
  className="relative space-y-2"
>
  <label
    className="mr-2 inline uppercase text-bold-body-300"
    data-testid="txt"
    htmlFor=":r23:"
  >
    ADD TREE SPECIES *
  </label>
  <p
    className="text-body-400 with-inner-html"
    dangerouslySetInnerHTML={
      Object {
        "__html": "List the tree species that you expect to restore on this project, across all sites. Please enter the scientific name for each tree species.",
      }
    }
    data-testid="txt"
    id=":r23:-description"
  />
  <div>
    <div
      className="text-12 flex w-[66%] gap-1 rounded border border-tertiary-80 bg-tertiary-50 p-2"
    >
      <div
        style={
          Object {
            "height": undefined,
            "width": 24,
          }
        }
      />
      If you would like to add a species not included on the original Restoration Project, it will be flagged to the admin as new information pending review.
    </div>
    <div
      className="mb-2 mt-8"
    >
      <p
        className="text-black text-14-light"
        data-testid="txt"
      >
        Scientific Name:
      </p>
      <div
        className="mt-3 flex items-start gap-3"
      >
        <div
          className="relative w-[40%]"
        >
          <div
            className="w-full"
            data-headlessui-state=""
          >
            <div
              className="relative space-y-2"
            >
              <div
                className="relative"
              >
                <input
                  aria-describedby=":r26:-description"
                  aria-expanded={false}
                  aria-invalid={false}
                  className="w-full outline-none transition-all duration-300 ease-in-out focus:ring-transparent px-3 py-[9px] rounded-lg focus:border-primary-500 border border-neutral-200"
                  data-headlessui-state=""
                  id=":r26:"
                  name="treeSpecies"
                  onChange={[Function]}
                  onChangeCapture={[Function]}
                  onClick={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  placeholder="Start typing"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <button
          disabled={true}
          onClick={[Function]}
        >
          <div
            style={
              Object {
                "height": undefined,
                "width": 24,
              }
            }
          />
        </button>
      </div>
    </div>
    <div
      className="mb-1 mt-9 flex gap-6 border-b pb-4"
    >
      <div
        className="w-[50%]"
      >
        <p
          className="uppercase text-black text-14-bold"
          data-testid="txt"
        />
        <p
          className="text-primary text-20-bold"
          data-testid="txt"
        >
          1
        </p>
      </div>
      <div
        className="border-r pr-6"
      >
        <p
          className="uppercase text-black text-14-bold"
          data-testid="txt"
        >
          SPECIES PLANTED:
        </p>
        <p
          className="text-primary text-20-bold"
          data-testid="txt"
        >
          0
        </p>
      </div>
      <div
        className=""
      >
        <p
          className="uppercase text-black text-14-bold"
          data-testid="txt"
        >
          TOTAL PLANTED TO DATE:
        </p>
        <p
          className="text-primary text-20-bold"
          data-testid="txt"
        >
          47,800
        </p>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className="relative flex w-full items-center gap-6 border-b border-neutral-450 py-2"
      >
        <div
          style={
            Object {
              "minWidth": "undefinedpx",
              "width": "undefinedpx",
            }
          }
        >
          <div
            className="flex items-center gap-1"
          >
            <p
              className="text-black  text-14-light"
              data-testid="txt"
            >
              Test
            </p>
          </div>
        </div>
        <div
          className=""
          style={
            Object {
              "minWidth": "undefinedpx",
              "width": "undefinedpx",
            }
          }
        >
          <div
            className="relative space-y-2"
          >
            <div
              className="relative"
            >
              <input
                aria-describedby=":r27:-description"
                aria-invalid={false}
                className="w-full outline-none transition-all duration-300 ease-in-out focus:ring-transparent py-[7.5px] py-1.5 !w-[100px] text-center border border-blueCustom-700 rounded hover:border-primary hover:shadow-blue-border opacity-60 outline-none text-14-light !font-primary text-center"
                defaultValue=""
                id=":r27:"
                name="amount"
                onChange={[Function]}
                onKeyDown={[Function]}
                onKeyDownCapture={[Function]}
                placeholder="0"
                type="number"
              />
            </div>
          </div>
        </div>
        <p
          className="text-black text-14-light"
          data-testid="txt"
          style={
            Object {
              "width": "undefinedpx",
            }
          }
        >
          7,400
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Elements/Inputs/TreeSpeciesInput With Number 1`] = `
<div
  className="relative space-y-2"
>
  <label
    className="mr-2 inline uppercase text-bold-body-300"
    data-testid="txt"
    htmlFor=":r28:"
  >
    ADD TREE SPECIES *
  </label>
  <p
    className="text-body-400 with-inner-html"
    dangerouslySetInnerHTML={
      Object {
        "__html": "List the tree species that you expect to restore on this project, across all sites. Please enter the scientific name for each tree species.",
      }
    }
    data-testid="txt"
    id=":r28:-description"
  />
  <div>
    <div
      className="mb-2 mt-8"
    >
      <p
        className="text-black text-14-light"
        data-testid="txt"
      >
        Scientific Name:
      </p>
      <div
        className="mt-3 flex items-start gap-3"
      >
        <div
          className="relative w-[40%]"
        >
          <div
            className="w-full"
            data-headlessui-state=""
          >
            <div
              className="relative space-y-2"
            >
              <div
                className="relative"
              >
                <input
                  aria-describedby=":r2b:-description"
                  aria-expanded={false}
                  aria-invalid={false}
                  className="w-full outline-none transition-all duration-300 ease-in-out focus:ring-transparent px-3 py-[9px] rounded-lg focus:border-primary-500 border border-neutral-200"
                  data-headlessui-state=""
                  id=":r2b:"
                  name="treeSpecies"
                  onChange={[Function]}
                  onChangeCapture={[Function]}
                  onClick={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  placeholder="Start typing"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <button
          disabled={true}
          onClick={[Function]}
        >
          <div
            style={
              Object {
                "height": undefined,
                "width": 24,
              }
            }
          />
        </button>
      </div>
    </div>
    <div
      className="mb-1 mt-9 flex gap-6 border-b pb-4"
    >
      <div
        className="w-[75%]"
      >
        <p
          className="uppercase text-black text-14-bold"
          data-testid="txt"
        />
        <p
          className="text-primary text-20-bold"
          data-testid="txt"
        >
          1
        </p>
      </div>
      <div
        className=""
      >
        <p
          className="uppercase text-black text-14-bold"
          data-testid="txt"
        >
          TREES TO BE PLANTED:
        </p>
        <p
          className="text-primary text-20-bold"
          data-testid="txt"
        >
          23
        </p>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className="relative flex w-full items-center gap-6 border-b border-neutral-450 py-2"
      >
        <div
          style={
            Object {
              "minWidth": "undefinedpx",
              "width": "undefinedpx",
            }
          }
        >
          <div
            className="flex items-center gap-1"
          >
            <p
              className="text-black  text-14-light"
              data-testid="txt"
            >
              Test
            </p>
          </div>
        </div>
        <div
          className=""
          style={
            Object {
              "width": "undefinedpx",
            }
          }
        >
          <div
            className="relative space-y-2"
          >
            <div
              className="relative"
            >
              <input
                aria-describedby=":r2c:-description"
                aria-invalid={false}
                className="w-full outline-none transition-all duration-300 ease-in-out focus:ring-transparent py-[7.5px] py-1.5 !w-[100px] text-center border border-blueCustom-700 rounded hover:border-primary hover:shadow-blue-border opacity-60 outline-none text-14-light !font-primary text-center"
                defaultValue={23}
                id=":r2c:"
                name="amount"
                onChange={[Function]}
                onKeyDown={[Function]}
                onKeyDownCapture={[Function]}
                placeholder="0"
                type="number"
              />
            </div>
          </div>
        </div>
        <div
          className="flex flex-1 justify-end gap-6"
        >
          <button
            className="flex items-center justify-center rounded-full hover:bg-opacity-60 text-blueCustom-700 hover:text-primary"
            onClick={[Function]}
          >
            <div
              style={
                Object {
                  "height": undefined,
                  "width": 24,
                }
              }
            />
          </button>
          <button
            className="flex items-center justify-center rounded-full hover:bg-opacity-60 text-blueCustom-700 hover:text-primary"
            onClick={[Function]}
          >
            <div
              style={
                Object {
                  "height": undefined,
                  "width": 24,
                }
              }
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
